# ComputerEngineeringCourses-ITCR

./: README.md
CE3101 - Bases de Datos/Examen/: examen2.sql
CE3101 - Bases de Datos/Presentaciones/.pptx/: 01-Introduction_to_Databases.pptx  03_-_Relational_Model.pptx  04-ER_to_Relational_Model_Mapping.pptx  06-SQL_Básico2.pptx  07-SQL_Avanzado.pptx  08-Procedimientos_Almacenados-2.pptx  Leccion_09_-_Normalizacion_y_teoría_de_diseño.pptx
CE3101 - Bases de Datos/Talleres/: TallerSQL_KunKinZhengLiang.sql
CE3101 - Bases de Datos/investigación/Python-SQLite/: employee.py  snippets.txt  sqlite_demo.py
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 1/InterconnectMP-main/: .gitignore  README.md
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 1/InterconnectMP-main/resources/config/: qos_config.txt
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 1/InterconnectMP-main/resources/graphics/: graphic_results.py
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 1/InterconnectMP-main/resources/logs/: interconnect_log.txt  interconnect_stats_log.txt  pes_log.txt  pes_stats_log.txt
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 1/InterconnectMP-main/resources/pe_cache/: cache_pe_0.txt  cache_pe_1.txt  cache_pe_10.txt  cache_pe_11.txt  cache_pe_12.txt  cache_pe_13.txt  cache_pe_14.txt  cache_pe_15.txt  cache_pe_2.txt  cache_pe_3.txt  cache_pe_4.txt  cache_pe_5.txt  cache_pe_6.txt  cache_pe_7.txt  cache_pe_8.txt  cache_pe_9.txt
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 1/InterconnectMP-main/resources/pe_instructions/: inst_pe_0.txt  inst_pe_1.txt  inst_pe_2.txt  inst_pe_3.txt  inst_pe_4.txt  inst_pe_5.txt  inst_pe_6.txt  inst_pe_7.txt
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 1/InterconnectMP-main/resources/shared_memory/: data.txt
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 1/InterconnectMP-main/src/: Makefile  cache_memory.cpp  cache_memory.hpp  constants.hpp  instruction_memory.cpp  instruction_memory.hpp  interconnect.cpp  interconnect.hpp  logger.cpp  logger.hpp  main.cpp  message.hpp  processing_element.cpp  processing_element.hpp  shared_memory.cpp  shared_memory.hpp  utils.cpp  utils.hpp
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 2/ArregloSistolico_Proyecto2-main/: .gitignore  LICENSE  README.md
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 2/ArregloSistolico_Proyecto2-main/SystolicArray_SV/: SystolicArray_SV.qpf  SystolicArray_SV.qsf  SystolicArray_SV.qws  SystolicArray_SV_assignment_defaults.qdf  SystolicArray_SV_nativelink_simulation.rpt  data.hex  data_out.hex  de10_debug_top.sv  de10_standard_top.sv  fpga_hc05_top.sv  image_processor.sv  image_processor.sv.bak  image_processor_tb.sv  image_processor_tb.sv.bak  memory.sv  memory.sv.bak  memory_tb.sv  memory_tb.sv.bak  memory_to_image.py  memory_wrapper.sv  memory_wrapper.sv.bak  performance_report.txt  processing_element.sv  processing_element.sv.bak  processing_element_tb.sv  processing_element_tb.sv.bak  ram.v  ram.v.bak  ram_bb.v  simple_uart_debug.sv  systolic_array.sv  systolic_array.sv.bak  systolic_array_tb.sv  systolic_array_tb.sv.bak  uart_image_controller.sv  uart_image_controller.sv.bak  uart_receiver.sv  uart_transmitter.sv
CE4302 - Arquitectura de Computadores II/Proyectos/Proyecto 2/ArregloSistolico_Proyecto2-main/uart/: advanced_performance_test.py  complete_system_test.py  debug_img_done_issue.py  debug_script.py  final_verification_test.py  hc05_test.py  quick_results_test.py  robust_results_test.py  test.py
CE4302 - Arquitectura de Computadores II/Prácticas/: Respuesta_examen_2_-_I2024.txt  Respuestas_práctica_CMP.txt  sol_examen01_S1_2024.txt
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto1-Operativos-main/: .gitignore  CMakeLists.txt  README.md
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto1-Operativos-main/docs/plantuml/: arquitectura.plantuml  componentes.plantuml  secuencia.plantuml  uml.plantuml
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto1-Operativos-main/src/: CMakeLists.txt  main.c
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto1-Operativos-main/src/gui/: GUI.py
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto1-Operativos-main/src/lib/: CEthreads.c  CEthreads.h  CMakeLists.txt
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto1-Operativos-main/src/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto1-Operativos-main/src/street/: street.c  street.config  street.h
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto1-Operativos-main/src/tests/: CMakeLists.txt  scheduler_test.c
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto2-Operativos-main/: README.md
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto2-Operativos-main/Biblioteca/: Makefile  demo  demo.c  robomano.c  robomano.h
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto2-Operativos-main/Driver/: .Module.symvers.cmd  .modules.order.cmd  .robomano_driver.ko.cmd  .robomano_driver.mod.cmd  .robomano_driver.mod.o.cmd  .robomano_driver.o.cmd  Makefile  robomano_driver.c  robomano_driver.ko  robomano_driver.mod  robomano_driver.mod.c
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto2-Operativos-main/Mano_Robotica/: Mano_Robotica.ino
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto2-Operativos-main/RoboticTEC/: 99-robomano.rules  Makefile  Makefile.backup_20250624_162156  Makefile.backup_robomano_20250624_154949  archivo_cifrado.txt  biblioteca.c  biblioteca.h  client  client.c  contar_palabras.py  debug_network.sh  fix_mpi_memory.sh  fix_robomano_permissions.sh  install_fixed.sh  integrate_robomano.sh  monitor_mpi.sh  nodo.c  run_with_robomano.sh  server.c  server.c.backup_robomano_20250624_154949
CE4303 - Principios de Sistemas Operativos/Proyectos/Proyecto2-Operativos-main/RoboticTEC/archivos/: archivo.txt
(+210 files in other folders)
